# zmq

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: zmq_s.podspec
ios/Classes/: zmq_s.c
lib/: zmq_s_bindings_generated.dart  zmq_simulation.dart
src/: CMakeLists.txt  zmq_s.c
